Adjust gc arguments [stage]